--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,23 @@
   --grey:#505356;
   --black:#030303;
   --lightblack:#191A19;
+  --transparentblack:rgb(0 0 0 / 52%);
   --background:rgb(255,88,100);
   --gradient:linear-gradient(90deg, rgba(255,88,100,1) 0%, rgba(233,83,134,1) 0%, rgba(201,11,74,1) 21%, rgba(253,41,123,1) 58%, rgba(255,101,91,1) 82%);
   --pink:#FEE3EC;
+  --transparent_grdient:linear-gradient(90deg, rgba(255,88,100,0.8) 0%, rgba(233,83,134,0.8) 0%, rgba(201,11,74,0.8) 21%, rgba(253,41,123,0.8) 58%, rgba(255,101,91,0.8) 82%);
   --purple:#B8BADB;
 }
 *{
+  box-sizing: border-box;
   margin: 0;
+  
 }
 #root{
   height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+
 }
 .auth_buttons>*{
   border: 1px solid ;
@@ -23,7 +30,7 @@ html{
 }
 body{
   min-height: 100vh;
-
+  font-family: 'Montserrat', sans-serif;
   margin:0;
 }
 
@@ -32,6 +39,7 @@ body{
   margin: auto;
   margin-top:95px;
   font-size: 180%;
+  
 }
 
 
@@ -65,7 +73,10 @@ body{
   align-items: center;
 }
 
-
+.read_more_link{
+  color: white;
+  text-decoration: underline;
+}
 
 .login_body{
  
@@ -101,6 +112,11 @@ body{
   border-radius: 10px;
 }
 
+#outlined_button{
+  border-color: var(--background);
+  color: white;
+}
+
 .flex{
   display: flex;
   flex-direction: row;
@@ -128,8 +144,9 @@ body{
 
 .main_heading{
   
-  font-size: 1.15rem;
+  font-size: 16px;
   font-family: 'Poppins', sans-serif;
+  color: var(--white);
 }
 
 
@@ -144,19 +161,253 @@ body{
 
 
 /* Profile */
-.sidenav{
-    height: 100vw;
-    width: 15%;
-    background-color: white;
-}
 
 .profile{
-  background-color: var(--pink);
+  min-height: 100%;
+  min-width: 100%;
+  background-color: var(--black);
+  padding:10px 0 0 10px;
+  color: var(--white);
+  
 }
 
-.active{
- background-color: var(--purple);
+.main_profile header main{
+  justify-content: space-between;
 }
+.sidenav{
+    
+    width: 15%;
+    
+    align-items: center;
+    padding-top:30px;
+    border-radius: 10px;
+    
+    min-width: 186px;
+    height:30%;
+    min-height: 434px;
+}
+
+nav{
+  width:100%;
+  align-items: center;
+  margin-top: 60px;
+}
+
+.side{
+  max-width: 200px;
+}
+
+.main_profile{
+  background-color: var(--lightblack);
+  width: 70%;
+  margin-top: 115px;
+  border-radius: 10px;
+}
+
+.social_links{
+  margin:20px 0 0;
+}
+.social_links>*{
+  margin-right: 18px;
+  color: white;
+  background: var(--background);
+  background: var(--gradient);
+  border-radius: 100%;
+}
+
+.social_links svg{
+  height: 25px;
+  width: 25px;
+  padding: 3px;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+.social_links svg:hover{
+  transform: scale(2);
+}
+.profile .avatar{
+  width: 0;
+  bottom: 50px;
+  left: 49px;
+  position: relative;
+  border-radius: 100%;
+    
+}
+
+.avatar img{
+  border-radius: 100%;
+  border: 4px solid var(--lightblack);
+}
+
+.main_profile header{
+  height: 274px;
+  margin-bottom: 30px;
+}
+
+.main_profile .about{
+  padding:12px 0 0 22px;
+ 
+  color: white;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.username{
+  color: var(--grey);
+  font-weight: 400;
+}
+.head_image_div{
+  max-height: 229px;
+  height: 90%;
+  user-select: auto;
+}
+
+.head_image_div img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.link_div{
+  
+  margin-bottom: 30px;
+  width: 70%;
+  height: 40px;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 10px;
+  padding-left: 10px;
+  font-size: 15px;
+  font-weight: 600;
+
+}
+nav a{
+  text-decoration: none;
+  color: var(--white);
+  margin-left: 10px;
+}
+nav a:hover{
+  background-color: var(--lightblack);
+}
+.link_text{
+  margin-left:5px ;
+}
+
+nav .active{
+  
+  background-color: var(--lightblack);
+}
+.ab{
+  width: 87%;
+  margin: 65px auto 0;
+  border-radius: 10px;
+  transition: height 0.3s;
+ 
+}
+.ab #transparent_div, #transparent_div{
+  background-color:var(--transparentblack);
+  color:white;
+  font-family: 'Montserrat', sans-serif;
+  
+}
+
+
+
+.link_div svg{
+  color:white
+}
+
+/* Project */
+
+.projects_div{
+  padding: 33px;
+}
+.projects{
+  margin-top: 10px;
+}
+.projects img{
+  object-fit: cover;
+}
+.projects>*{
+  
+  flex-basis: 28%;
+  min-width: 196px;
+  margin-right: 34px;
+}
+
+#transparent_div .section_heading{
+
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+ 
+}
+
+.projects svg{
+  margin:0 10px 7px;
+  cursor: pointer;
+}
+
+.extend_div{
+  margin-top: 20px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.extend_div:hover{
+  background-color: #6a6d70 !important;
+}
+
+/* Cards */
+
+.main_cards{
+  background: var(--transparent_grdient);
+  height: 100vh;
+}
+.card_second_div{
+  
+  background-color: var(--lightblack);
+  width: 35%;
+  min-width: 357px;
+  position: absolute;
+  left: 400px;
+  right: 400px;
+}
+.intro{
+  background-color: var(--lightblack);
+  height: 327px;
+  width: 100%;
+  align-items: center;
+  padding-top: 15px;
+  
+}
+
+.card .social_links{
+  margin-bottom: 30px;
+}
+
+.card .about{
+  flex-direction: column;
+}
+
+.info{
+  flex: 2;
+}
+
+.skills{
+  padding: 10px;
+  background: var(--black);
+  
+  
+}
+#skillbox{
+  background-color: var(--background);
+  color:white;
+  width: fit-content;
+  margin: 3.5px;
+  padding: 5px;
+}
+
 
 
 @media only screen and (max-width:1014px){
@@ -170,6 +421,15 @@ body{
 
   .input_section > *,.auth_buttons>*{
     width:324px;
+  }
+}
+
+
+
+
+@media only screen and (max-width:375px){
+  .main_heading{
+    font-size: 15px;
   }
 }
 
